--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.61",
+    "dayjs": "^1.11.10",
     "gsap": "^3.12.5",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
