--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-router-hash-link": "^2.4.3",
-    "split-type": "^0.3.4"
+    "split-type": "^0.3.4",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
