--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "sass-prod": "sass --no-source-map --style=compressed src/sass/main.scss:src/index.css"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.16.8",
     "@studio-freight/lenis": "^1.0.42",
     "@studio-freight/react-lenis": "^0.0.46",
+    "@types/three": "^0.165.0",
     "dayjs": "^1.11.10",
+    "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
@@ -22,8 +25,10 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-router-hash-link": "^2.4.3",
+    "shadergradient": "^1.2.14",
     "split-type": "^0.3.4",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "three": "^0.165.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
