--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "watch:sass": "sass --watch src/sass/main.scss src/index.css",
-    "sass-prod": "sass --no-source-map --style=compressed src/sass/main.scss:src/index.css"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@react-three/fiber": "^8.16.8",
@@ -40,7 +38,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.38",
-    "sass": "^1.71.1",
     "tailwindcss": "^3.4.4",
     "vite": "^5.1.4"
   }
