--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-router-hash-link": "^2.4.3",
