--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-router-hash-link": "^2.4.3",
+    "react-slick": "^0.30.2",
     "shadergradient": "^1.2.14",
+    "slick-carousel": "^1.8.1",
     "split-type": "^0.3.4",
     "swiper": "^11.1.1",
     "three": "^0.154.0"
