--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@studio-freight/react-lenis": "^0.0.46",
     "@types/three": "^0.154.0",
     "dayjs": "^1.11.10",
+    "dayjs-plugin-utc": "^0.1.2",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
     "nanoid": "^5.0.6",
