--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs-plugin-utc": "^0.1.2",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
+    "matter-js": "^0.20.0",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
